GH-3807 code cleanup (#3808)