@@ -94,7 +94,7 @@ class HTTPRepositoryConnection extends AbstractRepositoryConnection implements H
 	 * Variables *
 	 *-----------*/
 
-	private List<TransactionOperation> txn = Collections.synchronizedList(new ArrayList<>());
+	private final List<TransactionOperation> txn = Collections.synchronizedList(new ArrayList<>());
 
 	private final RDF4JProtocolSession client;
 
@@ -452,7 +452,7 @@ class HTTPRepositoryConnection extends AbstractRepositoryConnection implements H
 			// create a new format constant with identical properties as the
 			// N-Triples format, just with a different
 			// default MIME-type.
-			return new RDFFormat(NTRIPLES.getName(), Arrays.asList("text/plain"), NTRIPLES.getCharset(),
+			return new RDFFormat(NTRIPLES.getName(), List.of("text/plain"), NTRIPLES.getCharset(),
 					NTRIPLES.getFileExtensions(), NTRIPLES.supportsNamespaces(), NTRIPLES.supportsContexts(),
 					NTRIPLES.supportsRDFStar());
 		}
@@ -787,7 +787,7 @@ class HTTPRepositoryConnection extends AbstractRepositoryConnection implements H
 	 * Creates a RepositoryResult for the supplied element set.
 	 */
 	protected <E> RepositoryResult<E> createRepositoryResult(Iterable<? extends E> elements) {
-		return new RepositoryResult<>(new CloseableIteratorIteration<E, RepositoryException>(elements.iterator()));
+		return new RepositoryResult<>(new CloseableIteratorIteration<>(elements.iterator()));
 	}
 
 	@Override
