@@ -19,12 +19,12 @@ import java.util.List;
 public enum EndpointType {
 	NativeStore(Arrays.asList("NativeStore", "lsail/NativeStore")),
 	SparqlEndpoint(Arrays.asList("SparqlEndpoint", "api/sparql")),
-	RemoteRepository(Arrays.asList("RemoteRepository")),
-	Other(Arrays.asList("Other"));
+	RemoteRepository(List.of("RemoteRepository")),
+	Other(List.of("Other"));
 
-	private List<String> formatNames;
+	private final List<String> formatNames;
 
-	private EndpointType(List<String> formatNames) {
+	EndpointType(List<String> formatNames) {
 		this.formatNames = formatNames;
 	}
 
