@@ -7,7 +7,7 @@
  *******************************************************************************/
 package org.eclipse.rdf4j.workbench.base;
 
-import java.util.Arrays;
+import java.util.List;
 
 import javax.servlet.http.HttpServletResponse;
 
@@ -32,9 +32,8 @@ public abstract class TupleServlet extends TransformationServlet {
 	@Override
 	protected void service(WorkbenchRequest req, HttpServletResponse resp, String xslPath) throws Exception {
 		TupleResultBuilder builder = getTupleResultBuilder(req, resp, resp.getOutputStream());
-		RepositoryConnection con = repository.getConnection();
-		con.setParserConfig(NON_VERIFYING_PARSER_CONFIG);
-		try {
+		try (RepositoryConnection con = repository.getConnection()) {
+			con.setParserConfig(NON_VERIFYING_PARSER_CONFIG);
 			for (Namespace ns : Iterations.asList(con.getNamespaces())) {
 				builder.prefix(ns.getPrefix(), ns.getName());
 			}
@@ -42,11 +41,9 @@ public abstract class TupleServlet extends TransformationServlet {
 				builder.transform(xslPath, xsl);
 			}
 			builder.start(variables);
-			builder.link(Arrays.asList("info"));
+			builder.link(List.of("info"));
 			this.service(req, resp, builder, con);
 			builder.end();
-		} finally {
-			con.close();
 		}
 	}
 
